hphp/test/vm/abstract_static_1.php.expectf
HipHop Fatal error: Cannot call abstract method Foo::who() in %s on line 8
